--- a/dictionary.html
+++ b/dictionary.html
@@ -59,6 +59,10 @@
                 </div>
                 <div class="abcContent">
                     <div class="term">
+                        <h3 id="test">Test</h3>
+                        <p>Test</p>
+                    </div>
+                    <div class="term">
                         <h3 id="acc">Acceleration clause</h3>
                         <p>A clause used in your insurance contract that gives your insurer the right to demand payment for your policy in full, under specific circumstances outlined there. What could cause your insurer to invoke the acceleration clause? A couple of examples would be non-payment of premiums by a certain date or destruction of property.</p>
                     </div>
